常用方法封装

--- a/source/_posts/常用方法封装.md
+++ b/source/_posts/常用方法封装.md
@@ -21,3 +21,60 @@ replaceKey(data, oldKeyName, newKeyName) {
       return data;
     }
 ```
+##### es6解构赋值删除不需要的属性
+```JavaScript
+let {phone, qqList, ...obj} = {ck1: '1', phone:"10086", qqList:{}, ck2: '2', ck3: '3'};
+console.log(obj); // {ck1: '1', ck2: '2', ck3: '3'}
+```
+
+##### reduce删除对象中重复的属性--网上的例子
+```JavaScript
+let person = [
+     {id: 0, name: "小明"},
+     {id: 1, name: "小张"},
+     {id: 2, name: "小李"},
+     {id: 3, name: "小孙"},
+     {id: 1, name: "小周"},
+     {id: 2, name: "小陈"},   
+];
+
+let obj = {};
+
+person = person.reduce((cur,next) => {
+    obj[next.id] ? "" : obj[next.id] = true && cur.push(next);
+    return cur;
+},[]) //设置cur默认类型为数组，并且初始值为空的数组
+//log(person);
+```
+
+##### 检测是否是数组
+```JavaScript
+Array.isArray([]);  // true
+Array.isArray(undefined); // false;
+
+array instanceof Array; // true 检测对象的原型链是否指向构造函数的prototype对象
+```
+
+##### 数组的一些操
+```JavaScript
+//遍历数组
+let arr=[1,2,3,4,3,2,1];
+//forEach遍历数组的话，不能用break跳出循环，也不能用return返回外层。
+//for in遍历的是数组的索引（即键名），而for of遍历的是数组元素值
+for (let value of arr) {//break 跳出循环下面的方法继续执行；return 终止运行
+  console.log(value);//输出1,2,3,4,3,2,1
+}
+
+//map 返回一个新数组
+let users = [
+  {name: "张含韵", "email": "zhang@email.com"},
+  {name: "江一燕",   "email": "jiang@email.com"},
+  {name: "李小璐",  "email": "li@email.com"}
+];
+let emails = users.map(item=>item.email);
+
+//filter 返回过滤后的新数组
+let arr=[1,2,3,4,3,2,1,2];
+let newArr1=arr.filter((value,index,arr)=>value>=3)
+console.log(newArr1);//输出[3,4,3]
+```
