--- a/source/_posts/常用方法封装.md
+++ b/source/_posts/常用方法封装.md
@@ -55,7 +55,7 @@ Array.isArray(undefined); // false;
 array instanceof Array; // true 检测对象的原型链是否指向构造函数的prototype对象
 ```
 
-##### 数组的一些操
+##### 数组的一些操作
 ```JavaScript
 //遍历数组
 let arr=[1,2,3,4,3,2,1];
