--- a/source/_posts/记一些开发中遇到得问题.md
+++ b/source/_posts/记一些开发中遇到得问题.md
@@ -10,3 +10,19 @@ tags:
 ```JavaScript
 onclick="todo("+JSON.stringify(data).replace(/"/g, '&quot;')+")"
 ```
+##### ajax post方法参数问题
+```JavaScript
+let obj={};
+obj.gameName='xxx';
+obj.gameId='xxx';
+$.ajax({
+            type: "POST",
+            url: url+ "?t=" + new Date().getTime(),
+            data: JSON.stringify(obj),
+            contentType: "application/json; charset=UTF-8",
+            dataType: "json",
+            success: function (res) {
+               console.log(res)
+        });
+//使用contentType: “application/json”则data只能是json字符串
+```
