--- a/source/_posts/记一些开发中遇到得问题.md
+++ b/source/_posts/记一些开发中遇到得问题.md
@@ -26,3 +26,16 @@ $.ajax({
         });
 //使用contentType: “application/json”则data只能是json字符串
 ```
+##### switch(data){}
+```JavaScript
+switch(data){
+  case '1':
+      console.log(11);
+      break;
+case 2:
+    console.log(22);
+    break;
+}
+//switch对参数类型敏感 可以先打印看看data到底是什么类型的参数 console.log(typeof data);
+//如果参数data=1是字符串可以打印出11，但是如果1是number那么就不会去执行case1下面得了
+```
