--- a/source/_posts/常用方法封装.md
+++ b/source/_posts/常用方法封装.md
@@ -78,3 +78,17 @@ let arr=[1,2,3,4,3,2,1,2];
 let newArr1=arr.filter((value,index,arr)=>value>=3)
 console.log(newArr1);//输出[3,4,3]
 ```
+##### 时间戳转 y-m-d h:m:s
+```JavaScript
+function timestampToTime(timestamp) {
+    var date = timestamp.length == 10 ? new Date(timestamp * 1000) : new Date(timestamp);//时间戳为10位需*1000，时间戳为13位的话不需乘1000
+    Y = date.getFullYear() + '-';
+    M = (date.getMonth() + 1 < 10 ? '0' + (date.getMonth() + 1) : date.getMonth() + 1) + '-';
+    D = date.getDate() + ' ';
+    h = date.getHours() + ':';
+    m = date.getMinutes() + ':';
+    s = date.getSeconds();
+    //return Y+M+D+h+m+s;
+    return { ymd: Y + M + D, hms: h + m + s }
+}
+```
