--- a/source/_posts/记一些开发中遇到得问题.md
+++ b/source/_posts/记一些开发中遇到得问题.md
@@ -39,3 +39,12 @@ case 2:
 //switch对参数类型敏感 可以先打印看看data到底是什么类型的参数 console.log(typeof data);
 //如果参数data=1是字符串可以打印出11，但是如果1是number那么就不会去执行case1下面得了
 ```
+##### [WdatePicker.js](https://blog.csdn.net/nnn_net/article/details/50340929)使用
+```JavaScript
+//代码如下：
+<input id="startTime" class="Wdate m-letf3" readonly="readonly" type="text" onFocus="WdatePicker({ dateFmt: 'yyyy-MM-dd HH:mm:ss',maxDate:'#F{$dp.$D(\'endTime\',{d:-7})}'})"/>
+<input id="endTime" class="Wdate" readonly="readonly" type="text" onFocus="WdatePicker({ dateFmt: 'yyyy-MM-dd HH:mm:ss' ,minDate:'#F{$dp.$D(\'startTime\')}',maxDate:'#F{$dp.$D(\'startTime\',{d:7})}'})"/>
+//显示年月日时分秒:onFocus="WdatePicker({ dateFmt: 'yyyy-MM-dd HH:mm:ss'})"
+//结束时间为开始时间七天以内:startTime--maxDate:'#F{$dp.$D(\'endTime\',{d:-7})}'
+// endTime--minDate:'#F{$dp.$D(\'startTime\')}',maxDate:'#F{$dp.$D(\'startTime\',{d:7})}'
+```
