--- a/source/_posts/记一些开发中遇到得问题.md
+++ b/source/_posts/记一些开发中遇到得问题.md
@@ -48,3 +48,9 @@ case 2:
 //结束时间为开始时间七天以内:startTime--maxDate:'#F{$dp.$D(\'endTime\',{d:-7})}'
 // endTime--minDate:'#F{$dp.$D(\'startTime\')}',maxDate:'#F{$dp.$D(\'startTime\',{d:7})}'
 ```
+##### 使用toFixed()函数时，出现“toFixed() is not a function”的解决办法
+```JavaScript
+typeof item.price//string
+//toFixed只能针对数字类型才能使用，所以对于字符类型的要用parseFloat或者parseInt函数先转一下再调用
+parseInt(item.price).toFixed(2)//item.price=34.000 -- 34.00
+```
