--- a/source/_posts/记一些开发中遇到得问题.md
+++ b/source/_posts/记一些开发中遇到得问题.md
@@ -54,3 +54,9 @@ typeof item.price//string
 //toFixed只能针对数字类型才能使用，所以对于字符类型的要用parseFloat或者parseInt函数先转一下再调用
 parseInt(item.price).toFixed(2)//item.price=34.000 -- 34.00
 ```
+###### js获取当前时间的前一天/后一天
+```JavaScript
+var now=new Date();
+var preDate = new Date(now.getTime() - 24*60*60*1000); //前一天
+var nextDate = new Date(now.getTime() + 24*60*60*1000); //后一天
+```
