--- a/source/_posts/记一些开发中遇到得问题.md
+++ b/source/_posts/记一些开发中遇到得问题.md
@@ -60,3 +60,31 @@ var now=new Date();
 var preDate = new Date(now.getTime() - 24*60*60*1000); //前一天
 var nextDate = new Date(now.getTime() + 24*60*60*1000); //后一天
 ```
+##### try catch
+```JavaScript
+//背景--url跳转中文参数编码，由于未登录先去登录站点登录，进行了二次编码，导致获取url中文参数乱码问题
+try {
+    tryCode - 尝试执行代码块
+}
+catch(err) {
+    catchCode - 捕获错误的代码块
+} 
+finally {
+    finallyCode - 无论 try / catch 结果如何都会执行的代码块
+}
+//demo
+// 获取URL对应参数值
+function getUrlParam(name){
+    var reg = new RegExp("(^|&)"+ name +"=([^&]*)(&|$)"); //构造一个含有目标参数的正则表达式对象
+    var r = window.location.search.substr(1).match(reg);  //匹配目标参数
+    if (r!=null){
+        try {
+            return decodeURI(r[2]); //报错执行catch下得代码
+        }catch(e){
+            return unescape(r[2])
+        }
+    }else{
+        return null; //返回参数值
+    } 
+}
+```
