--- a/source/_posts/记一些开发中遇到得问题.md
+++ b/source/_posts/记一些开发中遇到得问题.md
@@ -88,3 +88,21 @@ function getUrlParam(name){
     } 
 }
 ```
+##### 限制input输入数字且小数点后最多n位
+```JavaScript
+function num(value,length) {
+    //length代表可以输入得小数位数
+    value = value.replace(/[^\d.]/g, "");  //清除“数字”和“.”以外的字符
+    value = value.replace(/\.{2,}/g, "."); //只保留第一个. 清除多余的
+    value = value.replace(".", "$#$").replace(/\./g, "").replace("$#$", ".");
+    var str='^(\\-)*(\\d+)\\.([0-9]{1,'+length+'}).*$';//给正则表达式代入动态参数 ，注意--反斜杠需要转义
+    var reg=new RegExp(str);
+    value = value.replace(reg,'$1$2.$3');//只能输入两个小数-- reg=/^(\-)*(\d+)\.([0-9]{1,2}).*$/
+    if (value.indexOf(".") < 0 && value != "") {//以上已经过滤，此处控制的是如果没有小数点，首位不能为类似于 01、02的金额
+       value = parseFloat(value);
+    }
+    return value
+}
+//使用：如果小数后面五位则num(this.value,5)
+<input placeholder="" onkeyup="this.value=num(this.value,2)" />
+```
