--- a/source/_posts/记一些开发中遇到得问题.md
+++ b/source/_posts/记一些开发中遇到得问题.md
@@ -9,6 +9,9 @@ tags:
 ##### onclick事件传递对象参数
 ```JavaScript
 onclick="todo("+JSON.stringify(data).replace(/"/g, '&quot;')+")"
+demo:
+<a class="fc-check" onclick="goDetail('+JSON.stringify(fcOrderList[i].orderId).replace(/"/g, '&quot;')+')">查看</a>//传递单个参数 单引号拼接
+"<td width=\"120\"><a class=\"fc-check\" onclick=\"todo("+JSON.stringify(data).replace(/"/g, '&quot;')+")\">查看</a></td>"//双引号拼接 传递对象参数--需要用\(反斜杠)转义
 ```
 ##### ajax post方法参数问题
 ```JavaScript
