--- a/source/_posts/记一些开发中遇到得问题.md
+++ b/source/_posts/记一些开发中遇到得问题.md
@@ -109,3 +109,9 @@ function num(value,length) {
 //使用：如果小数后面五位则num(this.value,5)
 <input placeholder="" onkeyup="this.value=num(this.value,2)" />
 ```
+##### 测试环境线上环境接口域名不同
+```JavaScript
+#获取协议 域名端口 拼接请求url
+`${location.protocol}//${location.host}`
+`${location.protocol}//${location.host}/api/getInfo`
+```
