增加阅读全文按钮

--- a/source/_posts/判断是否滚动到底部.md
+++ b/source/_posts/判断是否滚动到底部.md
@@ -6,6 +6,8 @@ categories:
 tags:
 - JavaScript
 ---
+JavaScript判断是否滚动到底部--可用于列表的滚动加载
+<!-- more -->
 ```JavaScript
 //滚动条在Y轴上的滚动距离
 function getScrollTop() {
