--- a/source/_posts/记一些开发中遇到得问题.md
+++ b/source/_posts/记一些开发中遇到得问题.md
@@ -6,6 +6,8 @@ categories:
 tags:
 - JavaScript
 ---
+平时开发中遇到的一些问题及解决方法
+<!-- more -->
 ##### onclick事件传递对象参数
 ```JavaScript
 onclick="todo("+JSON.stringify(data).replace(/"/g, '&quot;')+")"
