js返回上一页并刷新页面

--- a/source/_posts/记一些开发中遇到得问题.md
+++ b/source/_posts/记一些开发中遇到得问题.md
@@ -117,3 +117,8 @@ function num(value,length) {
 `${location.protocol}//${location.host}`
 `${location.protocol}//${location.host}/api/getInfo`
 ```
+##### js返回上一页并刷新页面
+```
+//<a href="#" onclick="self.location=document.referrer;">返回</a>
+self.location=document.referrer
+```
