添加代码类型

--- a/source/_posts/记一些开发中遇到得问题.md
+++ b/source/_posts/记一些开发中遇到得问题.md
@@ -118,7 +118,7 @@ function num(value,length) {
 `${location.protocol}//${location.host}/api/getInfo`
 ```
 ##### js返回上一页并刷新页面
-```
+```JavaScript
 //<a href="#" onclick="self.location=document.referrer;">返回</a>
 self.location=document.referrer
 ```
