时间跨天区间判断

--- a/source/_posts/记一些开发中遇到得问题.md
+++ b/source/_posts/记一些开发中遇到得问题.md
@@ -122,3 +122,25 @@ function num(value,length) {
 //<a href="#" onclick="self.location=document.referrer;">返回</a>
 self.location=document.referrer
 ```
+##### 当前时间是否符合某时间区间判断(跨天)
+```JavaScript
+window.onload = function () {
+            let timeList = ['09:00', "01:00"];
+            checkTime(...timeList)
+        }
+        function checkTime(startTime, endTime) {
+            //console.log(startTime, endTime);
+            //let now = new Date('2018-09-19 0:00').getTime();
+            let now = new Date().getTime();
+            let start = new Date().setHours(startTime.split(':')[0], startTime.split(':')[1], 0);
+            let end = new Date().setHours(endTime.split(':')[0], endTime.split(':')[1], 0);
+            if (end < start) {//end小于start表示是跨天区间
+                end += 24 * 60 * 60 * 1000//end加上一天
+            }
+            if (start < now && now < end) {
+                console.log(`在符合时间段内`);
+            } else {
+                console.log(`不在符合的时间段内,时间段为${startTime}-${endTime}`);
+            }
+        }
+```
