input限制只能输入纯数字问题

--- a/source/_posts/记一些开发中遇到得问题.md
+++ b/source/_posts/记一些开发中遇到得问题.md
@@ -144,3 +144,12 @@ window.onload = function () {
             }
         }
 ```
+##### input限制只能输入纯数字问题
+```JavaScript
+1、onkeyup = "value=value.replace(/[^\d]/g,'')"
+=> 使用 onkeyup 事件，有 bug ，那就是在中文输入法状态下，输入汉字之后直接回车，会直接输入字母
+2、onchange = "value=value.replace(/[^\d]/g,'')"
+=>使用 onchange 事件，在输入内容后，只有 input 丧失焦点时才会得到结果，并不能在输入时就做出响应
+3、oninput = "value=value.replace(/[^\d]/g,'')"
+=>使用 oninput 事件，完美的解决了以上两种问题，测试暂时还没有出现其它问题。
+```
