window.open在ajax请求完成新窗口被拦截的问题

--- a/source/_posts/记一些开发中遇到得问题.md
+++ b/source/_posts/记一些开发中遇到得问题.md
@@ -153,3 +153,22 @@ window.onload = function () {
 3、oninput = "value=value.replace(/[^\d]/g,'')"
 =>使用 oninput 事件，完美的解决了以上两种问题，测试暂时还没有出现其它问题。
 ```
+##### window.open在ajax请求完成新窗口被拦截的问题
+```JavaScript
+//解决--先通过用户点击打开一个新的空白窗口，然后再对新打开的页面进行重定向。
+        var newOpen=window.open();
+        $.ajax({
+            type: "GET",
+            url: url,
+            data: data,
+            contentType: "application/json; charset=UTF-8",
+            dataType: "json",
+            success: function (resp) {
+                if (resp.success) {
+                    newOpen.location.href = baseServiceUrl + "shPayment?orderId=" + resp.orderId;
+                } else {
+                  console.log('请求失败')
+                }
+            }
+        });
+```
