--- a/source/_posts/记一些开发中遇到得问题.md
+++ b/source/_posts/记一些开发中遇到得问题.md
@@ -172,3 +172,63 @@ window.onload = function () {
             }
         });
 ```
+##### WebUploader上传图片删除以后再上传同一张图片 提示超过大小限制（限制：10M，图：9M）
+ [WebUploader API](http://fex.baidu.com/webuploader/doc/index.html#WebUploader_Uploader_events)
+```
+getFiles
+getFiles() ⇒ Array
+getFiles( status1, status2, status... ) ⇒ Array
+返回指定状态的文件集合，不传参数将返回所有状态的文件。
+
+这里的状态如下：
+
+File.Status
+文件状态值，具体包括以下几种类型：
+
+-inited 初始状态
+-queued 已经进入队列, 等待上传
+-progress 上传中
+-complete 上传完成。
+-error 上传出错，可重试
+-interrupt 上传中断，可续传。
+-invalid 文件不合格，不能重试上传。会自动从队列中移除。
+-cancelled 文件被移除。
+就是说，只要我们的uploader对象没有重新创建，那它会保存所有选择的文件，
+
+当然我们也有方法，clear一下， 我们看到有这样的方法：
+
+removeFile
+removeFile( file ) ⇒ undefined
+removeFile( id ) ⇒ undefined
+removeFile( file, true ) ⇒ undefined
+removeFile( id, true ) ⇒ undefined
+参数:
+
+file {File, id}
+File对象或这File对象的id
+
+移除某一文件, 默认只会标记文件状态为已取消，如果第二个参数为 true 则会从 queue 中移除。
+
+当我们调用了一下removeFile方法后，只是标记了一下这个文件的状态，我们用getFiles方法，其实还是可以看到，
+
+这时我们可以再调用方法：
+
+reset
+reset() ⇒ undefined
+重置uploader。目前只重置了队列。就可以清除勾选的上传文件了
+
+在uploadSuccess事件中，调用removeFile方法，注意这个事件也是针对一个文件的
+//成功事件,  针对一个文件
+uploader.on('uploadSuccess', function (file, response) {
+    
+　　uploader.removeFile(file);
+
+});
+
+在uploadFinished事件中，调用reset方法，就可清空getfiles了
+// 所有文件上传成功后调用        
+uploader.on('uploadFinished', function () {
+    //清空队列
+     uploader.reset();
+});
+```
