添加代码规范

--- a/source/_posts/记一些开发中遇到得问题.md
+++ b/source/_posts/记一些开发中遇到得问题.md
@@ -174,7 +174,7 @@ window.onload = function () {
 ```
 ##### WebUploader上传图片删除以后再上传同一张图片 提示超过大小限制（限制：10M，图：9M）
  [WebUploader API](http://fex.baidu.com/webuploader/doc/index.html#WebUploader_Uploader_events)
-```
+```JavaScript
 getFiles
 getFiles() ⇒ Array
 getFiles( status1, status2, status... ) ⇒ Array
