获取图片的真实宽高

--- a/source/_posts/记一些开发中遇到得问题.md
+++ b/source/_posts/记一些开发中遇到得问题.md
@@ -232,3 +232,27 @@ uploader.on('uploadFinished', function () {
      uploader.reset();
 });
 ```
+##### 获取图片img的真实宽高大小
+```JavaScript
+// 获取图片真实高度
+function getImageSize(url,callback){
+    var img = new Image();
+    img.src = url;
+    // 如果图片被缓存，则直接返回缓存数据
+    if(img.complete){
+        callback(img.width, img.height);
+    }else{
+        img.onload = function(){
+            callback(img.width, img.height);
+        }
+    }
+}
+//调用：
+$(function(){
+    var imgSrc = $("#img").attr("src");
+    getImageSize(imgSrc,function(w,h){
+        console.log({width:w,height:h});
+    });
+});
+w--图片的宽 h--图片的高
+```
