--- a/source/_posts/记一些开发中遇到得问题.md
+++ b/source/_posts/记一些开发中遇到得问题.md
@@ -111,6 +111,20 @@ function num(value,length) {
 //使用：如果小数后面五位则num(this.value,5)
 <input placeholder="" onkeyup="this.value=num(this.value,2)" />
 ```
+##### 限制input输入数字且小数点后最多n位(第一位不能是小数点)
+```JavaScript
+function num(obj) {
+    obj.value = obj.value.replace(/[^\d.]/g, ""); //清除"数字"和"."以外的字符
+    obj.value = obj.value.replace(/^\./g, ""); //验证第一个字符是数字
+    obj.value = obj.value.replace(/\.{2,}/g, "."); //只保留第一个, 清除多余的
+    obj.value = obj.value.replace(".", "$#$").replace(/\./g, "").replace("$#$", ".");
+    obj.value = obj.value.replace(/^(\-)*(\d+)\.(\d).*$/, '$1$2.$3'); //只能输入一个小数
+}
+//两位小数
+obj.value = obj.value.replace(/^(\-)*(\d+)\.(\d\d).*$/, '$1$2.$3'); //添加 \d 即为小数位数
+//使用
+<input  placeholder="" onkeyup="num(this)" />
+```
 ##### 测试环境线上环境接口域名不同
 ```JavaScript
 #获取协议 域名端口 拼接请求url
