--- a/source/_posts/记一些开发中遇到得问题.md
+++ b/source/_posts/记一些开发中遇到得问题.md
@@ -116,7 +116,7 @@ function num(value,length) {
 function num(obj) {
     obj.value = obj.value.replace(/[^\d.]/g, ""); //清除"数字"和"."以外的字符
     obj.value = obj.value.replace(/^\./g, ""); //验证第一个字符是数字
-    obj.value = obj.value.replace(/\.{2,}/g, "."); //只保留第一个, 清除多余的
+    obj.value = obj.value.replace(/\.{2,}/g, "."); //只保留第一个".", 清除多余的
     obj.value = obj.value.replace(".", "$#$").replace(/\./g, "").replace("$#$", ".");
     obj.value = obj.value.replace(/^(\-)*(\d+)\.(\d).*$/, '$1$2.$3'); //只能输入一个小数
 }
