字符串首尾保留中间星号

--- a/source/_posts/记一些开发中遇到得问题.md
+++ b/source/_posts/记一些开发中遇到得问题.md
@@ -302,3 +302,25 @@ showTime(sendTime) {
 		return sendTime
 	}
 ```
+##### 字符串首尾保留中间星号
+```JavaScript
+function parseStringToStar(str, len, fixLen) {
+	//str-- 传入的字符串
+	//len-- 首尾需保留的长度
+	//fixLen --是否固定显示星号数量
+	var starLen = fixLen ? new Array(fixLen + 1).join('*') : (str.length > 6 ? new Array(str.length - (2 * len - 1)).join(
+		'*') : new Array(str.length -
+		(len - 1)).join('*'))
+	return str.length > 6 ? str.substr(0, len) + starLen + str.substr(-len) : str.substr(0, len) + starLen
+}
+
+//使用
+## parseStringToStar('278383678@qq.com',3,3)
+## "278***com"
+
+## parseStringToStar('278383678@qq.com',3)
+## "278**********com"
+
+## parseStringToStar('123456',3)
+## "123***"
+```
