webuploader自动生成上传按钮定位不对问题

--- a/source/_posts/记一些开发中遇到得问题.md
+++ b/source/_posts/记一些开发中遇到得问题.md
@@ -245,6 +245,37 @@ uploader.on('uploadFinished', function () {
     //清空队列
      uploader.reset();
 });
+
+//uploader pick自动生成的上传按钮位置不对（应包含在wrap内却在body中）
+ uploader = WebUploader.create({
+        auto: true,
+        pick: {
+            id: '#filePicker',
+            label: '上传图片',
+            multiple: false
+        },
+        paste: document.body,
+
+        accept: {
+            title: 'Images',
+            extensions: 'gif,jpg,bmp,png,jpeg',
+            mimeTypes: 'image/gif,image/jpg,image/bmp,image/png,image/jpeg'
+        },
+
+        // swf文件路径
+        swf: './swf/uploader.swf',
+
+        disableGlobalDnd: true,
+        timeout: 0,
+        chunked: false,
+        chunkSize: 10 * 1024 * 1024,
+        server: '/api/UploadFile',
+        fileNumLimit: 1,
+        fileSizeLimit: 10 * 1024 * 1024, // 10 M
+        fileSingleSizeLimit: 10 * 1024 * 1024 // 10 M
+    });
+//uploader初始化以后调用
+    uploader.refresh();
 ```
 ##### 获取图片img的真实宽高大小
 ```JavaScript
