判断一个变量是不是空对象

--- a/source/_posts/常用方法封装.md
+++ b/source/_posts/常用方法封装.md
@@ -96,3 +96,9 @@ function timestampToTime(timestamp,full) {
     }
 }
 ```
+##### 判断一个变量是不是空对象
+```JavaScript
+function isEmptyObj(obj) {
+    return obj !== null && typeof obj === 'object' && !Array.isArray(obj) && (Object.getOwnPropertyNames(obj).length === 0) && (Object.getOwnPropertySymbols(obj).length === 0)
+}
+```
