--- a/source/_posts/记一些开发中遇到得问题.md
+++ b/source/_posts/记一些开发中遇到得问题.md
@@ -355,3 +355,7 @@ function parseStringToStar(str, len, fixLen) {
 ## parseStringToStar('123456',3)
 ## "123***"
 ```
+##### js正则去除字符串中的中文英文数字
+```JavaScript
+str.match(/[a-zA-Z0-9\u4e00-\u9fa5]+/g).join('');
+```
