--- a/source/_posts/记一些开发中遇到得问题.md
+++ b/source/_posts/记一些开发中遇到得问题.md
@@ -358,4 +358,5 @@ function parseStringToStar(str, len, fixLen) {
 ##### js正则去除字符串中的中文英文数字
 ```JavaScript
 str.match(/[a-zA-Z0-9\u4e00-\u9fa5]+/g).join('');
+str.replace(/[^\u4e00-\u9fa5a-zA-Z0-9]/g,'')
 ```
