js 过滤敏感词 ，可将带有标点符号的敏感词过滤掉

--- a/source/_posts/记一些开发中遇到得问题.md
+++ b/source/_posts/记一些开发中遇到得问题.md
@@ -360,3 +360,58 @@ function parseStringToStar(str, len, fixLen) {
 str.match(/[a-zA-Z0-9\u4e00-\u9fa5]+/g).join('');
 str.replace(/[^\u4e00-\u9fa5a-zA-Z0-9]/g,'')
 ```
+##### js 过滤敏感词 ，可将带有标点符号的敏感词过滤掉
+```JavaScript
+//简单版本
+function transSensitive(content) {
+    var Sensitive = wordList//敏感词数组
+    var v = new RegExp(Sensitive.join('|'), "gi");//将数组转成正则
+    var array = new Array();
+    //将特殊符号的过滤并且保存
+    content = content.replace(/[\ |\~|\`|\!|\@|\#|\$|\%|\^|\&|\*|\(|\)|\-|\_|\+|\=|\||\\|\[|\]|\{|\}|\;|\:|\"|\'|\,|\<|\.|\>|\/|\?]/g, function (s, i) {
+        array.push({
+            index: i,
+            content: s
+        });
+        return s.replace(/./g, '');
+    })
+    //将敏感词进行筛选
+    console.log(content, v);
+    return content.replace(v, '**')
+}
+
+//适用
+function filterWords(content) {
+    //敏感词数组--wordList
+    var v = new RegExp(wordList.join('|'), "gi");//将数组转成正则
+    var array = new Array();
+    //将特殊符号的过滤并且保存
+    content = content.replace(/[\ |\~|\`|\!|\@|\#|\$|\%|\^|\&|\*|\(|\)|\-|\_|\+|\=|\||\\|\[|\]|\{|\}|\;|\:|\"|\'|\,|\<|\.|\>|\/|\?]/g, function (s, i) {
+        array.push({
+            index: i,
+            content: s
+        });
+        return s.replace(/./g, '');
+    })
+    //将敏感词进行筛选
+    console.log(content, v);
+    var output = content.replace(v, function (sMatch) {
+        //sMatch 匹配到的敏感词
+        if (sMatch.length <= 1) {
+            return sMatch.replace(/./g, '*');
+        }
+        else {
+            return sMatch.replace(/./g, '*');
+            /* return sMatch[0] + sMatch.replace(/./g, '*').substring(0, sMatch.length - 1);//将词的第一个字保留 */
+        }
+    })
+    var array2 = output.split('');//将字符串转成char数组
+    console.log(array, array2);
+    //循环array 将array[i].content 通过array[i].index 插入指定位置 现将array[i].content  应该算是拼接
+    for (var i = 0; i < array.length; i++) {
+        array2.splice(array[i].index, 0, array[i].content);
+    }
+    console.log(array2);
+    return array2.join('');
+}
+```
