--- a/source/_posts/常用方法封装.md
+++ b/source/_posts/常用方法封装.md
@@ -102,3 +102,28 @@ function isEmptyObj(obj) {
     return obj !== null && typeof obj === 'object' && !Array.isArray(obj) && (Object.getOwnPropertyNames(obj).length === 0) && (Object.getOwnPropertySymbols(obj).length === 0)
 }
 ```
+##### 分割一位数组
+```
+function cutArr(size, arr) {
+    var result = [];
+    for (var i = 0; i < arr.length; i += size) {
+        result.push(data.slice(i, i + size));
+    }
+    return result
+}
+//示例
+var data = [
+  {name:'Liming',age:'25'},
+  {name:'Liming',age:'25'},
+  {name:'Liming',age:'25'},
+  {name:'Liming',age:'25'},
+  {name:'Liming',age:'25'},
+  {name:'Liming',age:'25'},
+  {name:'Liming',age:'25'},
+  {name:'Liming',age:'25'},
+  {name:'Liming',age:'25'},
+  {name:'Liming',age:'25'},
+];
+cutArr(3,data)
+```
+![](/images/cutArr.png '结果截图')
