--- a/source/_posts/记一些开发中遇到得问题.md
+++ b/source/_posts/记一些开发中遇到得问题.md
@@ -415,3 +415,13 @@ function filterWords(content) {
     return array2.join('');
 }
 ```
+##### ajax contentType
+```JavaScript
+1. application/x-www-form-urlencoded(默认类型)
+
+如果不指定其他类型的话, 默认是x-www-form-urlencoded, 此类型要求参数传递样式为 key1=value1&key2=value2
+
+2. application/json
+
+更适合传递大数据的形式, 参数样式就是json格式, 例如{"key1":"value1","key2":[1,2,3]}等
+```
