--- a/source/_posts/前端面试题.md
+++ b/source/_posts/前端面试题.md
@@ -6,6 +6,8 @@ categories:
 tags:
 - JavaScript
 ---
+前端面试题。
+<!-- more -->
 ##### HTTP协议
 #### (1).常见的请求方法
 
@@ -102,7 +104,7 @@ HTTP2.0
 
 ##### ajax
 (1).实现一个Ajax
-```
+```JavaScript
 
 var xhr = new XMLHttpRequest()
 // 必须在调用 open()之前指定 onreadystatechange 事件处理程序才能确保跨浏览器兼容性
@@ -129,7 +131,7 @@ xhr.send(null)
 4--完成。已经接收到全部响应数据，而且已经可以在客户端使用了。
 
 (3).将原生的 ajax 封装成 promise
-```
+```JavaScript
 const ajax = (url, method, async, data) => {
   return new Promise((resolve, reject) => {
     const xhr = new XMLHttpRequest()
