jq判断div是否滚动到底部

--- a/source/_posts/常用方法封装.md
+++ b/source/_posts/常用方法封装.md
@@ -103,7 +103,7 @@ function isEmptyObj(obj) {
 }
 ```
 ##### 分割一位数组
-```
+```JavaScript
 function cutArr(size, arr) {
     var result = [];
     for (var i = 0; i < arr.length; i += size) {
@@ -127,3 +127,21 @@ var data = [
 cutArr(3,data)
 ```
 ![](/images/cutArr.png '结果截图')
+##### jq判断div是否滚动到底部（loadMore）
+```JavaScript
+  $('#div').scroll(function (event) {
+    var scrollTop = $(this).scrollTop();//表示滚动条滚动的高度
+    var height = $(this).height();//div高度
+    var scrollHeight = $(this)[0].scrollHeight;//表示滚动条需要滚动的高度
+    // var scrollTop = event.currentTarget.scrollTop;
+    // var height = event.currentTarget.clientHeight;
+    // var scrollHeight = event.currentTarget.scrollHeight;
+    //console.log(scrollTop, height, scrollHeight);
+    if (scrollTop + height == scrollHeight) {
+      console.log('到底了');
+    }
+    if (scrollTop == 0) {
+      console.log('到顶了');
+    }
+  })
+```
