倒计时修改

--- a/source/_posts/分秒倒计时.md
+++ b/source/_posts/分秒倒计时.md
@@ -48,3 +48,42 @@ methods: {
     }
   }
 ```
+
+```JavaScript
+var timerHourDown;
+function getTime(timeStamp) {
+    //时分倒计时
+    if (timeStamp > 0) {
+        var h = 0;
+        var m = 0;
+        var s = 0;
+        function countDown() {
+            $('.icon-dater').show()
+            if (timeStamp <= 0) {
+                clearInterval(timerHourDown)
+                $('.icon-dater').hide()
+            }
+            timeStamp -= 1000
+            h = Math.floor((timeStamp / 1000 / 60 / 60) % 24);
+            m = Math.floor((timeStamp / 1000 / 60) % 60);
+            s = Math.floor((timeStamp / 1000) % 60);
+            //console.log(timeStamp, s);
+            $('.icon-dater').empty().html(h + "小时" + m + "分后自动确认")
+        }
+        timerHourDown = setInterval(countDown, 1000);
+    } else {
+        setTimeout(function () {
+            $('.icon-dater').hide()
+        }, 0)
+        clearInterval(timerHourDown)
+    }
+}
+
+    var d = parseInt(timeStamp / (24 * 60 * 60 * 1000));//天数
+    var h = parseInt(timeStamp / (60 * 60 * 1000) % 24);//当前天内小时
+    var hh = parseInt(timeStamp / (60 * 60 * 1000));//单纯剩余小时
+    var m = parseInt(timeStamp / (60 * 1000) % 60);//当前小时内剩余分钟
+    var mm = parseInt(timeStamp / 60 / 1000);//单纯剩余分钟
+    var s = parseInt(timeStamp / 1000 % 60);//当前分钟内剩余秒数
+    var ss = parseInt(timeStamp / 1000);//单纯剩余秒数
+```
