reduce数组合并去重并修改数组中对象的属性值

--- a/source/_posts/常用方法封装.md
+++ b/source/_posts/常用方法封装.md
@@ -46,7 +46,32 @@ person = person.reduce((cur,next) => {
     obj[next.id] ? "" : obj[next.id] = true && cur.push(next);
     return cur;
 },[]) //设置cur默认类型为数组，并且初始值为空的数组
-//log(person);
+//console.log(person);
+```
+##### reduce数组合并去重并修改数组中对象的属性值
+```JavaScript
+let arr = [{ name: '应继武', vendor: 1 }, { name: '李四', vendor: 1 },{ name: '张三', vendor: 1 }];
+let arr1 = [{ name: '应继武', vendor: 2 }, { name: '张三', vendor: 2 }, { name: '王五', vendor: 2 }];
+let list = [...arr, ...arr1];
+
+let d = []
+let hash = {}
+d = list.reduce((item, next, index, sArr) => {
+    // console.log(item, next, index, sArr)
+    hash[next.name] ? item=setArr(next.name,item) : hash[next.name] = true && item.push(next)
+    return item
+}, [])
+
+function setArr(name,list){
+    list.forEach(item=>{
+        if(item.name===name){
+            item.vendor=3
+        }
+    })
+    return list
+}
+//console.log(d)
+//[{ name: '应继武', vendor: 3 }, { name: '李四', vendor: 1 },{ name: '张三', vendor: 3 }, { name: '王五', vendor: 2 }]
 ```
 
 ##### 检测是否是数组
